// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sandbox/Carousel/CarouselButton _CarouselButton smoke-test 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: rgba(0,0,0,0.32);
  -webkit-transition: 0.4s visibility,0.4s opacity,0.2s background-color,0.2s color;
  transition: 0.4s visibility,0.4s opacity,0.2s background-color,0.2s color;
  color: #ffffff;
}

.c0 {
  position: absolute;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  min-width: 40px;
  border: none;
  outline: 0;
  background: transparent;
  cursor: pointer;
  -webkit-transition: 0.4s visibility,0.4s opacity;
  transition: 0.4s visibility,0.4s opacity;
  z-index: 1;
}

.c0:hover .c1 {
  background-color: rgba(0,0,0,0.3472);
  color: #f5f5f5;
}

.c0:active .c1 {
  background-color: rgba(0,0,0,0.4288);
  color: #d6d6d6;
}

<div data-dark="false">
  <button type="button"
          class="c0"
          style="left: 0px; padding-left: 0px; padding-bottom: 0px;"
  >
    <div class="c1 c2">
      <svg viewbox="0 0 24 24"
           size="24"
           class="gyClQP"
      >
        <path d="M8.08579 16.5858C7.30474 17.3668 7.30474 18.6332 8.08579 19.4142C8.86684 20.1953 10.1332 20.1953 10.9142 19.4142L18.3284 12L10.9142 4.58579C10.1332 3.80474 8.86684 3.80474 8.08579 4.58579C7.30474 5.36684 7.30474 6.63317 8.08579 7.41421L12.6716 12L8.08579 16.5858Z"
              transform="rotate(180 12 12)"
        >
        </path>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Sandbox/Carousel/CarouselButton _ScrollHintButton smoke-test 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: rgba(0,0,0,0.32);
  -webkit-transition: 0.4s visibility,0.4s opacity,0.2s background-color,0.2s color;
  transition: 0.4s visibility,0.4s opacity,0.2s background-color,0.2s color;
  color: #ffffff;
}

.bdpGAM:hover .c0 {
  background-color: rgba(0,0,0,0.3472);
  color: #f5f5f5;
}

.bdpGAM:active .c0 {
  background-color: rgba(0,0,0,0.4288);
  color: #d6d6d6;
}

.c2 {
  cursor: pointer;
}

.c2:hover {
  background-color: rgba(0,0,0,0.3472);
  color: #f5f5f5;
}

.c2:active {
  background-color: rgba(0,0,0,0.4288);
  color: #d6d6d6;
}

<div data-dark="false">
  <div class="c0 c1 c2">
    <svg viewbox="0 0 24 24"
         size="24"
         class="gyClQP"
    >
      <path d="M8.08579 16.5858C7.30474 17.3668 7.30474 18.6332 8.08579 19.4142C8.86684 20.1953 10.1332 20.1953 10.9142 19.4142L18.3284 12L10.9142 4.58579C10.1332 3.80474 8.86684 3.80474 8.08579 4.58579C7.30474 5.36684 7.30474 6.63317 8.08579 7.41421L12.6716 12L8.08579 16.5858Z"
            transform="rotate(180 12 12)"
      >
      </path>
    </svg>
  </div>
</div>
`;
